--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css/style.css" />
     <title>Login</title>
   </head>
   <body>
@@ -21,6 +21,7 @@
           placeholder="Informe seu email"
           value="fulano@gmail.com"
         />
+        
       </div>
       <div class="form-item">
         <label for="senha">Senha: </label>
@@ -32,6 +33,7 @@
           value="12345"
         />
       </div>
+      
       <div class="form-botao-item">
         <input type="submit" value="Enviar" id="form-botao" />
       </div>
